Updated the user supplier prod and connected supplier prod to array only
